2009-06-13  Vivek Dasmohapatra  <vivek@etla.org>

	* ui_ops/notify_ui_ops.c (_elim_notify_search): pass on the account uid

2009-06-05  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c: search callbacks (add, join etc)
	(_h_elim_notify_search_callback): handle search result action "buttons"

	* ui_ops/notify_ui_ops.c: search results 
	(_elim_notify_search): notification to send search meta-data
	(_elim_notify_search_rows): sub-notification to sends search results

	* xnode/xnode.c (xnode_list_item_string): add strimg item to sexp list

	* elim-rpc.h (LS_STR): add string to sexp list structure
	(LS_NODE): add generic node to sexp list structure
	(NOTIFY_RESP): move typedef so it is visible to ui_ops _and_ handlers
	(CB_HANDLER): add 'type' member to struct
	(NOTIFY_RESP): add user_data and sres members

	* elim-rpc.c (check_cb_data): peek at cb data without removing it

2009-05-28  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-mode-map): start to define garak keymap
	(garak-activate)  : connect account(s) associated with buffer
	(garak-deactivate): disconnect account(s) or leave conversation
	(garak-toggle-offline-buddies): hide/show offline buddies
	(garak-mode): add `:group' to mode definition to allow customisation

2009-05-23  Vivek Dasmohapatra  <vivek@etla.org>

	* icons/blocked.png: new icon.

	* elisp/elim.el (elim-toggle-user-blocked): implement toggle privacy op

	* elisp/garak.el (garak-icon-tags): new icon and tag
	(garak-buddy-list-node-command): implement toggle privacy menu op
	(garak-buddy-list-choose-icon): prioritise blocked icon over status icon

	* handlers/buddy_privacy.c (_h_elim_buddy_privacy): toggle/set blocked

	* handlers/add_buddy.c (_h_elim_add_buddy): zap clones in blist

	* elim-rpc.h: consolidate definition of utility macros
	(FETCH_ACCOUNT)      : fetch account by uid
	(FIND_ACCOUNT)       : account by uid or name+proto
	(BNODE_ACCOUNT_CHECK): buddy account/supplied account match