@@ -492,11 +492,11 @@ substitute these characters for the basic ascii ones:\n
 
 (defvar garak-search-button-menu nil)
 (defun garak-search-results-buffer (proc search-id args) 
-  (let (sbuf sbuf-store)
+  (let ((i 0) sbuf sbuf-store)
     (setq sbuf-store (elim-fetch-process-data proc :search-buffers)
           sbuf       (elim-avalue search-id sbuf-store))
     (when (and sbuf (not (buffer-live-p sbuf)))
-      (message "detroying dead s-buffer")
+      ;;(message "detroying dead s-buffer")
       (setq sbuf-store (rassq-delete-all sbuf sbuf-store)
             sbuf nil))
     (when (not sbuf)
@@ -507,6 +507,8 @@ substitute these characters for the basic ascii ones:\n
       (with-current-buffer sbuf
         (elim-init-ui-buffer)
         (garak-init-local-storage)
+        (setq garak-elim-process proc)
+        (setq garak-account-uid (elim-avalue "account-uid" args))
         (set (make-local-variable 'garak-search-button-menu)
              (make-sparse-keymap "Actions..."))
         (mapc 
@@ -514,24 +516,34 @@ substitute these characters for the basic ascii ones:\n
            (let (cb action label)
              (setq label  (car a)
                    action (elim-avalue "action" (cdr a))
-                   cb    `(lambda (ev) (interactive "e") 
-                            (garak-notify-search-callback ev ,action)))
-             (define-key garak-search-button-menu [garak-notify-search-callback]
-               (list 'menu-item label cb)) ))
-         (elim-avalue "buttons" args))
-        (if (current-local-map)
-            (use-local-map (copy-keymap (current-local-map)))
-          (use-local-map (make-sparse-keymap)))
-        (message "menu: %S" garak-search-button-menu)
-        (local-set-key (kbd "<down-mouse-1>") garak-search-button-menu)
-        ;;(message "local-map: %S" )
-        (setq garak-elim-process proc))
+                   cb    `(lambda (e &rest x)
+                            (interactive (list (this-command-keys)))
+                            (when (vectorp e) (setq e (aref e 0)))
+                            (setq e
+                                  (if (eventp e) 
+                                      (posn-point (event-start e)) 
+                                    (point)))
+                            (garak-notify-search-callback e ,action)))
+             (define-key garak-search-button-menu (format "%d" i)
+               (list 'menu-item label cb))) 
+           (setq i (1+ i)))
+         (elim-avalue "buttons" args)))
       (elim-store-process-data proc :search-buffers sbuf-store))
     sbuf))
 
 (defvar garak-search-column-labels nil)
 (defun garak-notify-search-callback (point action)
-  (message "garak-notify-search-callback(%S %S)" point action))
+  (message "garak-notify-search-callback(%S %S)" point action)
+  (let ((row nil) (start point) (args nil))
+    (setq start (next-single-char-property-change (point-min) 'result-start)
+          row   (- (line-number-at-pos point) 
+                   (line-number-at-pos start) 2)
+          args  (elim-simple-list-to-proto-alist 
+                 (list "account-uid" garak-account-uid
+                       "row-index"   row
+                       "callback"    action))
+          call  (elim-daemon-call 'notify-search-callback nil args)) 
+    (elim-process-send garak-elim-process call) ))
 
 (defun garak-notify-search (proc name id status args)
   (with-current-buffer (garak-search-results-buffer proc id args)
@@ -546,11 +558,14 @@ substitute these characters for the basic ascii ones:\n
          (elim-avalue "columns" args)) ))
 
 (defun garak-notify-search-rows (proc name id status args)
+  (message "garak-notify-search-rows(%s...)" id)
   (let ((sid   (elim-avalue "search-id" args))
         (rows  (elim-avalue "results"   args))
         (titles nil)
         (widths nil)
         (format nil)
+        (menu   nil)
+        (rrow   nil)
         (l      0)
         (n      0))
     (with-current-buffer (garak-search-results-buffer proc sid args)
@@ -567,8 +582,16 @@ substitute these characters for the basic ascii ones:\n
                       (setq n (1+ n))) row))
             (cons titles rows))
       (setq format (mapconcat (lambda (x) (format "%%%ds" x)) widths " | "))
-      (mapc (lambda (x) (insert (apply 'format format x) "\n")) 
-            (cons titles rows)) 
+      (setq menu (if (current-local-map)
+                     (copy-keymap (current-local-map))
+                   (make-sparse-keymap)))
+      (mapc (lambda (key) 
+              (define-key menu key garak-search-button-menu))
+            (list (kbd "RET") (kbd "<down-mouse-1>")))
+      (insert (apply 'format format titles) "\n")
+      (mapc
+       (lambda (x) 
+         (insert (propertize (apply 'format format x) 'keymap menu) "\n")) rows)
       (display-buffer (current-buffer))) ))
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -2076,15 +2099,17 @@ elim-connection-state or elim-connection-progress, but any call can be handled a
 
 (defun garak ()
   (interactive)
-  (let ((buffer (get-buffer "*garak*")))
+  (let ((buffer (get-buffer "*garak*")) proc)
     (if (garak-buffer-reusable nil buffer)
         (switch-to-buffer buffer)
       (switch-to-buffer (setq buffer (generate-new-buffer "*garak*")))
-      (make-local-variable 'garak-elim-process)
-      (garak-mode))
+      (garak-mode)
+      (garak-init-local-storage))
     (setq lui-input-function 'garak-input-handler)
     (lui-insert "starting elim" t)
-    (setq garak-elim-process (elim-start "(elim . garak)" nil garak-callbacks))
+    (setq proc
+          (elim-start "(elim . garak)" nil garak-callbacks))
+    (with-current-buffer buffer (setq garak-elim-process proc))
     (elim-store-process-data garak-elim-process :cli-buffer buffer)
     (let ((display-buffer-reuse-frames t))
       (display-buffer (garak-ui-create-widget-buffer garak-elim-process)))
